header section complete

--- a/index.html
+++ b/index.html
@@ -35,12 +35,25 @@
       </div>
     </nav>
     <!-- End nav section -->
+    <!-- header section  -->
     <header>
       <div class="container header-section flex">
-        <div class="header-left"></div>
-        <div class="header-right"></div>
+        <div class="header-left">
+          <h1>Design confidently</h1>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est
+            voluptas aliquid explicabo velit aut nemo natus nostrum molestiae
+            veritatis iusto.
+          </p>
+          <a href="#" class="praimary-button get-started-button">Get Started</a>
+        </div>
+        <div class="header-right">
+          <img src="assets/asset 2.jpeg" alt="herro image" />
+        </div>
       </div>
     </header>
+    <!-- End header section  -->
+    
     <section class="companies-section"></section>
     <section class="features-section"></section>
     <section class="big-feature-section"></section>
