--- a/index.html
+++ b/index.html
@@ -53,9 +53,85 @@
       </div>
     </header>
     <!-- End header section  -->
-    
-    <section class="companies-section"></section>
-    <section class="features-section"></section>
+
+    <section class="companies-section">
+      <div class="container">
+        <div class="small-bold-text companies-header">
+          The world's best companies rely on usabilityHub to make better design
+          decisions.
+        </div>
+        <div class="logos flex">
+          <img class="logo" src="assets/asset 3.png" alt="" />
+          <img class="logo" src="assets/asset 4.png" alt="" />
+          <img class="logo" src="assets/asset 5.png" alt="" />
+          <img class="logo" src="assets/asset 6.png" alt="" />
+          <img class="logo" src="assets/asset 7.png" alt="" />
+          <img class="logo" src="assets/asset 8.svg" alt="" />
+          <img class="logo" src="assets/asset 9.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <!-- end  -->
+    <section class="features-section">
+      <div class="container">
+        <div class="features-header">
+          <h2>Your user research Swiss Arm knife</h2>
+          <a class="secondary-button" href="#"
+            >See all features <i class="fa-solid fa-arrow-right"></i
+          ></a>
+        </div>
+        <div class="features-area flex">
+          <div class="features-card flex">
+            <img src="assets/asset 11.svg" alt="" />
+            <h3>Card Sorting</h3>
+            <p>Discover how people navigate your figma prototypes.</p>
+            <a class="secondary-button" href="#"
+              >Learn more <i class="fa-solid fa-arrow-right"></i
+            ></a>
+          </div>
+          <div class="features-card flex">
+            <img src="assets/asset 13.svg" alt="" />
+            <h3>Card Sorting</h3>
+            <p>Discover how people navigate your figma prototypes.</p>
+            <a class="secondary-button" href="#"
+              >Learn more <i class="fa-solid fa-arrow-right"></i
+            ></a>
+          </div>
+          <div class="features-card flex">
+            <img src="assets/asset 14.svg" alt="" />
+            <h3>Card Sorting</h3>
+            <p>Discover how people navigate your figma prototypes.</p>
+            <a class="secondary-button" href="#"
+              >Learn more <i class="fa-solid fa-arrow-right"></i
+            ></a>
+          </div>
+          <div class="features-card flex">
+            <img src="assets/asset 15.svg" alt="" />
+            <h3>Card Sorting</h3>
+            <p>Discover how people navigate your figma prototypes.</p>
+            <a class="secondary-button" href="#"
+              >Learn more <i class="fa-solid fa-arrow-right"></i
+            ></a>
+          </div>
+          <div class="features-card flex">
+            <img src="assets/asset 16.svg" alt="" />
+            <h3>Card Sorting</h3>
+            <p>Discover how people navigate your figma prototypes.</p>
+            <a class="secondary-button" href="#"
+              >Learn more <i class="fa-solid fa-arrow-right"></i
+            ></a>
+          </div>
+          <div class="features-card flex">
+            <img src="assets/asset 17.svg" alt="" />
+            <h3>Card Sorting</h3>
+            <p>Discover how people navigate your figma prototypes.</p>
+            <a class="secondary-button" href="#"
+              >Learn more <i class="fa-solid fa-arrow-right"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="big-feature-section"></section>
     <section class="big-feature-section"></section>
     <section class="big-feature-section"></section>
@@ -63,6 +139,7 @@
     <section class="cta-section"></section>
     <footer></footer>
     <div class="sub-footer"></div>
+    <div class="space" style="height: 100vh"></div>
     <script
       src="https://kit.fontawesome.com/28b4e9fb14.js"
       crossorigin="anonymous"
